--- a/firstproject/src/main/resources/application.properties
+++ b/firstproject/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 server.servlet.encoding.force=true
 spring.h2.console.enabled=true
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem://localhost/~/testdb
