--- a/firstproject/src/main/resources/application.properties
+++ b/firstproject/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.servlet.encoding.force=true
 spring.h2.console.enabled=true
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem://localhost/~/testdb
 spring.jpa.defer-datasource-initialization=true
+#spring.datasource.sql-script-encoding=UTF-8
