--- a/firstproject/src/main/resources/application.properties
+++ b/firstproject/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.h2.console.enabled=true
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem://localhost/~/testdb
 spring.jpa.defer-datasource-initialization=true
 #spring.datasource.sql-script-encoding=UTF-8
+
+# JPA 로깅 설정
+# 디버그 레벨로 쿼리 출력
+logging.level.org.hibernate.SQL=DEBUG
