--- a/firstproject/src/main/resources/application.properties
+++ b/firstproject/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 server.servlet.encoding.force=true
 spring.h2.console.enabled=true
-spring.datasource.hikari.jdbc-url=jdbc:h2:mem://localhost/~/testdb
 spring.jpa.defer-datasource-initialization=true
 #spring.datasource.sql-script-encoding=UTF-8
 
 # JPA 로깅 설정
 # 디버그 레벨로 쿼리 출력
 logging.level.org.hibernate.SQL=DEBUG
+# 쿼리 줄바꿈하기
+spring.jpa.properties.hibernate.format_sql=true
+# 매개변수 값 보여 주기
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# DB URL 설정
+# 유니크 URL 생성하지 않기
+spring.datasource.generate-unique-name=false
+# 고정 URL 설정하기 / jdbc:h2:mem:testdb 접근
+spring.datasource.url=jdbc:h2:mem:testdb
