--- a/hodolog/front/package.json
+++ b/hodolog/front/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "element-plus": "^2.5.1",
     "pinia": "^2.1.7",
