--- a/hodolog/src/main/resources/application.yml
+++ b/hodolog/src/main/resources/application.yml
@@ -16,3 +16,7 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+  jpa:
+    defer-datasource-initialization: true
+  sql:
+    init-model: always
