JWT를 이용한 인증 - 암호화 키 분리 및 개선

--- a/hodolog/src/main/resources/application.yml
+++ b/hodolog/src/main/resources/application.yml
@@ -20,3 +20,7 @@ spring:
     defer-datasource-initialization: true
   sql:
     init-model: always
+
+
+hodolman:
+  jwt-key : "kItB4fBY6rVkxV69VfrHdz/WpHiEVUVc2/8BPTEB3lA="
