--- a/hodolog/src/main/resources/application.yml
+++ b/hodolog/src/main/resources/application.yml
@@ -19,7 +19,8 @@ spring:
   jpa:
     defer-datasource-initialization: true
   sql:
-    init-model: always
+    init:
+      mode: never
 
 
 hodolman:
