--- a/hodolog/build.gradle
+++ b/hodolog/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto
     implementation 'org.springframework.security:spring-security-crypto'
+    // https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
+
 
 
     implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
