--- a/hodolog/src/main/resources/application.yml
+++ b/hodolog/src/main/resources/application.yml
@@ -10,7 +10,6 @@ spring:
       pageable:
         one-indexed-parameters: true
         default-page-size: 5
-
   datasource:
     url: jdbc:h2:mem:hodolog
     username: sa
@@ -21,7 +20,15 @@ spring:
   sql:
     init:
       mode: never
+  session:
+    timeout: 86400
 
 
 hodolman:
   jwt-key : "kItB4fBY6rVkxV69VfrHdz/WpHiEVUVc2/8BPTEB3lA="
+
+server:
+  servlet:
+    session:
+      cookie:
+        max-age: 172800
