--- a/spring_security/build.gradle
+++ b/spring_security/build.gradle
@@ -22,11 +22,17 @@ repositories {
 }
 
 dependencies {
-    //implementation 'org.springframework.boot:spring-boot-starter-security'
+
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    //implementation 'org.springframework.boot:spring-boot-starter-web-services'
-    //implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+    // 스프링 시큐리티 사용하기 위한 스타터
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    // 시큐리티 테스트하기 위한 의존성
+    implementation 'org.springframework.security:spring-security-test:'
+    // 타임리프에서 시큐리티 사용하기 위한 의존성
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+    
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
