--- a/ssy_spring/spring_boot/springboot-developer/src/main/resources/application.yml
+++ b/ssy_spring/spring_boot/springboot-developer/src/main/resources/application.yml
@@ -8,3 +8,11 @@ spring:
 
     # 테이블 생성 후에 data.sql 실행
     defer-datasource-initialization: true
+  # h2 고정 url
+  datasource:
+    url: jdbc:h2:mem:testdb
+  # h2 콘솔 활성화
+  h2:
+    console:
+      enabled: true
+
