--- a/ssy_spring/spring_boot/springboot-developer/build.gradle
+++ b/ssy_spring/spring_boot/springboot-developer/build.gradle
@@ -21,6 +21,12 @@ dependencies {
     // 스프링 데이터 JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    // 스프링 시큐리티 사용하기 위한 스타터
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    // 시큐리티 테스트하기 위한 의존성
+    implementation 'org.springframework.security:spring-security-test:'
+    // 타임리프에서 시큐리티 사용하기 위한 의존성
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     runtimeOnly 'com.h2database:h2' // 인메모리 데이터베이스
     compileOnly 'org.projectlombok:lombok' // 롬복
     annotationProcessor 'org.projectlombok:lombok'
