--- a/ssy_spring/spring_boot/springboot-developer/build.gradle
+++ b/ssy_spring/spring_boot/springboot-developer/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     runtimeOnly 'com.h2database:h2' // 인메모리 데이터베이스
     compileOnly 'org.projectlombok:lombok' // 롬복
     annotationProcessor 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
