--- a/ssy_spring/spring_boot/springboot-developer/build.gradle
+++ b/ssy_spring/spring_boot/springboot-developer/build.gradle
@@ -32,8 +32,9 @@ dependencies {
     implementation 'javax.xml.bind:jaxb-api:2.3.1' // XML 문서와 Java 객체 간 매핑 자동화
 
     runtimeOnly 'com.h2database:h2' // 인메모리 데이터베이스
-    compileOnly 'org.projectlombok:lombok' // 롬복
+    compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
