OAuth 인증 및 의존성 추가

--- a/shin_spring/springboot-developer/src/main/resources/application.yml
+++ b/shin_spring/springboot-developer/src/main/resources/application.yml
@@ -15,7 +15,16 @@ spring:
   h2:
     console:
       enabled: true
-
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: <<>>
+            client-secret: <<>>
+            scope:
+              - email
+              - profile
 jwt:
   issuer: cjfsud23@naver.com
   secret_key: study-springboot
